<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <artifactId>atom-service</artifactId>
        <groupId>cn.lampup</groupId>
        <version>0.0.1-SNAPSHOT</version>
<!--        <relativePath>../pom.xml</relativePath>-->
    </parent>

    <artifactId>atom-service-space</artifactId>
    <packaging>pom</packaging>
    <modules>
        <module>atom-service-space-common</module>
        <module>atom-service-space-consumers</module>
        <module>atom-service-space-entity</module>
        <module>atom-service-space-provider</module>
        <module>atom-service-space-service</module>
    </modules>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <spring-boot.version>2.1.7.RELEASE</spring-boot.version>
    </properties>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>cn.lampup</groupId>
                <artifactId>decoration-core</artifactId>
                <version>0.0.5</version>
            </dependency>
            <dependency>
                <groupId>io.github.githublaohu</groupId>
                <artifactId>dubbo-springmvc</artifactId>
                <version>0.0.6</version>
                <type>pom</type>
            </dependency>
            <dependency>
                <groupId>io.github.githublaohu</groupId>
                <artifactId>dubbo-provider</artifactId>
                <version>0.0.6</version>
                <type>pom</type>
            </dependency>
            <dependency>
                <groupId>io.github.githublaohu</groupId>
                <artifactId>shardingsphere-dependent</artifactId>
                <version>0.0.6</version>
                <type>pom</type>
            </dependency>
            <dependency>
                <groupId>io.github.githublaohu</groupId>
                <artifactId>logback-dependent</artifactId>
                <version>0.0.10</version>
                <type>pom</type>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.8</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>io.netty</groupId>
            <artifactId>netty-all</artifactId>
            <version>4.1.38.Final</version>
        </dependency>
    </dependencies>
    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.7.0</version>
                    <configuration>
                        <source>1.8</source>
                        <target>1.8</target>
                        <encoding>UTF-8</encoding>
                        <testIncludes>
                            <testInclude>none</testInclude>
                        </testIncludes>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>3.0.2</version>
                    <configuration>
                        <archive>
                            <manifest>
                                <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                                <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
                            </manifest>
                        </archive>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>3.2.1</version>
                    <configuration>
                        <attach>true</attach>
                    </configuration>
                    <executions>
                        <execution>
                            <id>attach-sources</id>
                            <goals>
                                <goal>jar-no-fork</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>2.20.1</version>
                    <configuration>
                        <argLine>-Xmx512m -XX:PermSize=128m
                            -XX:MaxPermSize=128m
                        </argLine>
                        <testFailureIgnore>true</testFailureIgnore>
                        <includes>
                            <include>**/*Test*.java</include>
                        </includes>
                        <excludes />
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

</project>